# azure-telephony-ai-voice-agent

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  app.py  pyproject.toml
.devcontainer/: devcontainer.json
src/: webserver.py
